fixed gap issue between images (now there is almost no gap)

--- a/public/magazine.css
+++ b/public/magazine.css
@@ -43,7 +43,9 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
-    margin: 0 auto;
+    margin: 0.01rem auto;
+    display: flex;
+    gap: 0 !important;
 }
 
 #mag-container {
@@ -54,9 +56,12 @@ body {
 
 #magazine .turn-page {
     background-color: var(--page-bg);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    border: none !important;
+    margin: 0.01rem !important;
+    padding: 0.01rem !important;
 }
 
 .nav-btn {
